--- a/.gitignore
+++ b/.gitignore
@@ -1,34 +1,32 @@
-*/target/
-# Ignored files
-*.class
-*.jar
-*.lst
-*/target/
-*.class
-*.idea/
-*.iml
-*/target/*
-.idea/workspace.xml
-*.class
-/bin/
-/WebContent/
-sm-shop/SALESMANAGER.lock.db
-.DS_Store
-*/sm-shop/**
-.project
-sm-admin/**/rebel*.xml
-sm-shop/**/rebel*.xml
-sm-admin/.project
-sm-core-model/.project
-sm-core-modules/.project
-sm-core/.project
-sm-shop/.project
-**/bin
-**/build
-**/.settings
-**/.classpath
-*/sm-shop/src/main/resources/*
-sm-shop/src/main/resources/database.properties
-.DS_Store
+HELP.md
+/target/
+!.mvn/wrapper/maven-wrapper.jar
 
-.mvnw/*.jar
+### STS ###
+.apt_generated
+.classpath
+.factorypath
+.project
+.settings
+.springBeans
+.sts4-cache
+
+### IntelliJ IDEA ###
+.idea
+*.iws
+*.iml
+*.ipr
+
+### NetBeans ###
+/nbproject/private/
+/nbbuild/
+/dist/
+/nbdist/
+/.nb-gradle/
+/build/
+
+### Database ###
+db/*
+
+#mac-os
+*.DS_Store
